[package]
name = "libsecp256k1"
description = "Pure Rust secp256k1 implementation."
license = "Apache-2.0"
version = "0.3.5"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/paritytech/libsecp256k1"
keywords = [ "crypto", "ECDSA", "secp256k1", "bitcoin", "no_std" ]
edition = "2018"

[lib]
name = "secp256k1"

[dependencies]
rand = { version = "0.7.3", git = "https://github.com/mesalock-linux/rand-sgx", default-features = false }
hmac-drbg = { version = "0.2", git = "https://github.com/sgx-test/hmac-drbg-sgx", optional = true }
sha2 = { version = "0.8", optional = true, git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx", default-features = false }
digest = { version = "0.8", git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx" }
typenum = { version = "1.11", optional = true }
arrayref = { version = "0.3", git = "https://github.com/sgx-test/arrayref-sgx"}
subtle = { version = "2.2", git = "https://github.com/mesalock-linux/subtle-sgx", default-features = false }
serde =  { version = "1.0.104", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"], default-features = false }
base64 = { version = "0.11.0", default-features = false, features = ["alloc"] }
crunchy = "0.2"

sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
#[dev-dependencies]
#secp256k1-test = "0.7"
#clear_on_drop = "0.2"
#rand-test = { package = "rand", version = "0.4" }
#serde_json = "1.0"
#hex-literal = "0.2.1"

[features]
default = [ "hmac","mesalock_sgx"] # "std"
std = ["subtle/std", "rand/std", "sha2/std","serde/std", "base64/std"] # "serde/std", "base64/std"
hmac = ["hmac-drbg", "sha2", "typenum"]
mesalock_sgx = ["sgx_tstd"]
sgx = ["mesalock_sgx","hmac"]

[workspace]
members = [
  "./gen/ecmult",
  "./gen/genmult",
]
